tests/bits-param/too-few-bits.stderr
error[E0277]: the trait bound `modular_bitfield::private::checks::False: modular_bitfield::private::checks::FillsUnalignedBits` is not satisfied
   --> $DIR/too-few-bits.rs:4:1
    |
4   | pub struct SignInteger {
    | ^^^ the trait `modular_bitfield::private::checks::FillsUnalignedBits` is not implemented for `modular_bitfield::private::checks::False`
    |
   ::: $WORKSPACE/src/private/checks.rs
    |
    |     <Self::CheckType as DispatchTrueFalse>::Out: FillsUnalignedBits,
    |                                                  ------------------ required by this bound in `modular_bitfield::private::checks::CheckFillsUnalignedBits`
